   > Blood Boost: Magic skill learned at level 22.
   > Magical Breeze: Magic skill learned at level 23.
  ~ Player 3, 4 skills:
   > Group Heal: Magic skill learned at level 17 (replaces Blood Boost).
   > Curify: Magic skill learned at level 22.
   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 0 skills:
   > 
 - Added 43 new items:
  ~ 7 recovery/buff items:
   > Large Potion
   > Large Elixir
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Vicious Root
   > Tomato
  ~ 17 materials:
   > Blank Tome
   > Feral Bat Wing
   > Thick-Skinned Herb
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Dragon Scale
   > Enchanted Dragon Scale
   > Ice Cube
   > Tellurium Dust
   > Tellurium Alloy
   > Life Orb
   > Mana Orb
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 11 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
  ~ 6 miscellaneous items:
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED TROPHY]
 - Added 61 new equipment items:
  ~ 10 weapons:
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Hero Sword Replica
   > Tellurium Wand
   > Life Crystal Staff
   > Mana Crystal Staff
   > Bloodlust ★★
  ~ 8 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
   > Tellurium Heavy Armor
   > Tellurium Robes
   > Tellurium Vestments
   > Tellurium Leathers
  ~ 4 headgear:
   > Dapper-Looking Hat
   > Bunny Hood
   > Dragon Scale Helmet
   > Sorrowful Headpiece
  ~ 6 footgear:
   > Hiking Boots ★★