@@ -5222,7 +5222,7 @@
     ],
     "gold": 0,
     "name": "Baby Ent",
-    "note": "<Attack Animation: 1>\n<Element Absorb: 6>",
+    "note": "<Attack Animation: 1>\n<Element Absorb: 6>\n\n<Enemy Drops>\nPetrified Wood: 60%\nPetrified Wood: 60%\nPetrified Wood: 60%\n</Enemy Drops>",
     "params": [
       100,
       0,
