@@ -5873,5 +5873,31 @@
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
+  },
+  {
+    "id": 204,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "Even though it looks like normal wood, it's been practically\nturned to stone after decades of exposure to wet sediments.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 331,
+    "itypeId": 1,
+    "name": "Petrified Wood",
+    "note": "<Menu Category: Materials, Drops>",
+    "occasion": 3,
+    "price": 12,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
   }
 ]
