@@ -30,7 +30,7 @@ Additions:
    > Resurgence: Magic skill learned at level 25.
   ~ Player 4, 0 skills:
    > 
- - Added 43 new items:
+ - Added 44 new items:
   ~ 7 recovery/buff items:
    > Large Potion
    > Large Elixir
@@ -39,7 +39,7 @@ Additions:
    > Stimulant
    > Vicious Root
    > Tomato
-  ~ 17 materials:
+  ~ 18 materials:
    > Blank Tome
    > Feral Bat Wing
    > Thick-Skinned Herb
@@ -47,6 +47,7 @@ Additions:
    > Medicinal Herb
    > Medicinal Root
    > Raw Truffle
+   > Petrified Wood
    > Dragon Scale
    > Enchanted Dragon Scale
    > Ice Cube
